src/test/ui/coherence/coherence-cow.re_b.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-cow.rs:23:1
   |
LL | impl<T> Remote for Pair<Cover<T>,T> { }
   | ^^^^^^^^^^^^^^^^^^^----------------
   | |                  |
   | |                  `lib::Pair` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0117`.
